<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/black">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Trip"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:layout_gravity="center" />
    </androidx.appcompat.widget.Toolbar>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/app_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_toolbar"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/location"
                android:hint="@string/loc1"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/destination"
                android:hint="@string/loc2"
                android:layout_marginBottom="10dp"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/carNum"
                android:hint="@string/carNum"
                android:layout_marginBottom="10dp"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/priceTrip"
                android:hint="@string/price"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />
            <EditText
                android:id="@+id/maxNum"
                android:hint="@string/maxNum"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select trip date:"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Select trip time:"
                android:textSize="15sp"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/Time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:entries="@array/time" />

            <Button
                android:id="@+id/addTrip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/black"
                android:text="Add" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>